--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node --transpile-only index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "vitest --run",
+    "coverage": "vitest --run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "mime-types": "^2.1.35",
     "prisma": "^4.5.0",
-    "ts-node": "^10.9.1",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#fix-buttons-list"
   },
   "devDependencies": {
-    "typescript": "^4.8.4"
+    "@faker-js/faker": "^7.6.0",
+    "@types/express": "^4.17.14",
+    "@types/mime-types": "^2.1.1",
+    "@types/supertest": "^2.0.12",
+    "@vitest/coverage-istanbul": "^0.24.5",
+    "supertest": "^6.3.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.5"
   }
 }
